# sdc

./: .gitignore
doc/: script_raise_bandwidth.sh  setup.txt
gpu_flow/code/: client.c  main.cu  main_convert.cpp  server
gpu_flow/code/code/: README.txt  cuda_defines.h  interact.c  interact.h  main.cu  main_convert.cu  main_dispersion.cpp  main_distribution.cpp  main_extract_vel.cu  server.c
gpu_flow/code/matrix/: matrix_device.h  matrix_folder.cu  matrix_folder.h  matrix_host_iterator.h
gpu_flow/code/operator/: .Untitled Document.swp  calculate_temperature_operator.cu  calculate_temperature_operator.h  freeze_operator.h  linear_implicit_operator.cu  masking.cu  masking.h  masktemp.cu  masktemp.h  nonlinear_operator_rayleigh_noslip.cu
gpu_flow/code/output/: datafile.cpp  datafile.h  datapoint_writer.cu  datastruct.h  matrix_folder_writer.h  server_writer.cu  server_writer.h  serverclient.cpp  serverclient.h
gpu_flow/code/output_OLD/: .datafile.cpp.swp  .serverclient.cpp.swp  datafile.cpp  datafile.h  datapoint_writer.h  matrix_folder_writer.cu  server_writer.cu  server_writer.h  serverclient.cpp  track_movie.cpp  track_movie.h  track_writer.cu  (+1 more)
gpu_flow/rbcvisual/: datafile.cpp  datafile.h
gpu_flow/run/: .script_onset_isr.sh.swp  Makefile  convert  dispersion  distribution  extractvel  make_all.sh  rayleigh_circle  rayleigh_disk_array  rayleigh_mcircle  rayleigh_mperiodic  rayleigh_periodic  rayleigh_rectangle  script_chiam.sh  script_giantspiral.py  script_highra.sh  script_onset_isr.sh
visual-prog/: CMakeLists.txt
visual-prog/src/: collisions.cpp  collisions.h  coloring.cpp  coloring.h  defines.h  main.cpp  visual.cpp  visual.h  window.cpp  window.h
visual-prog/src/network/: datafile.cpp  datafile.h  datastruct.h  server_writer.cu  server_writer.h  serverclient.cpp  serverclient.h
(+44 files in other folders)
